src/objects/Enquete__c.object
<CustomObject>
    <fields>
        <fullName>Company__c</fullName>
        <label>会社</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>FirstName__c</fullName>
        <label>名</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ImportancePoint__c</fullName>
        <inlineHelpText>複数選択可能</inlineHelpText>
        <label>重視ポイント</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1：料金予算</fullName>
                </value>
                <value>
                    <fullName>2：場所</fullName>
                </value>
                <value>
                    <fullName>3：交通の便</fullName>
                </value>
                <value>
                    <fullName>4：接客態度応対</fullName>
                </value>
                <value>
                    <fullName>5：料理</fullName>
                </value>
                <value>
                    <fullName>6：披露宴会場</fullName>
                </value>
                <value>
                    <fullName>7：格式</fullName>
                </value>
                <value>
                    <fullName>8：知名度</fullName>
                </value>
                <value>
                    <fullName>9：ロビー外観</fullName>
                </value>
                <value>
                    <fullName>10：付帯設備</fullName>
                </value>
                <value>
                    <fullName>11：チャペル</fullName>
                </value>
                <value>
                    <fullName>12：神殿</fullName>
                </value>
                <value>
                    <fullName>13：日取り</fullName>
                </value>
                <value>
                    <fullName>14：演出</fullName>
                </value>
                <value>
                    <fullName>15：その他</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LastName__c</fullName>
        <inlineHelpText>全角５０文字</inlineHelpText>
        <label>姓</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Media__c</fullName>
        <label>知ったきっかけ</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1：ゼクシィ</fullName>
                </value>
                <value>
                    <fullName>2：ゼクシィネット</fullName>
                </value>
                <value>
                    <fullName>3：ゼクシィなび</fullName>
                </value>
                <value>
                    <fullName>4：すぐ婚</fullName>
                </value>
                <value>
                    <fullName>5：自社ＨＰ</fullName>
                </value>
                <value>
                    <fullName>6：みんなのＷ</fullName>
                </value>
                <value>
                    <fullName>7：Ｗパーク</fullName>
                </value>
                <value>
                    <fullName>8：結婚チャオ</fullName>
                </value>
                <value>
                    <fullName>9：チャオネット</fullName>
                </value>
                <value>
                    <fullName>10：会員</fullName>
                </value>
                <value>
                    <fullName>11：紹介</fullName>
                </value>
                <value>
                    <fullName>12：列席経験</fullName>
                </value>
                <value>
                    <fullName>13：映画館ＣＭ</fullName>
                </value>
                <value>
                    <fullName>14：DM</fullName>
                </value>
                <value>
                    <fullName>15：折り込みチラシ</fullName>
                </value>
                <value>
                    <fullName>16：ゼクシィアウトレット</fullName>
                </value>
                <value>
                    <fullName>17：家族のすすめ</fullName>
                </value>
                <value>
                    <fullName>18：紹介・クチコミ</fullName>
                </value>
                <value>
                    <fullName>19：フリーペーパー</fullName>
                </value>
                <value>
                    <fullName>20：TVCM</fullName>
                </value>
                <value>
                    <fullName>21：ラジオCM</fullName>
                </value>
                <value>
                    <fullName>22：設置広告</fullName>
                </value>
                <value>
                    <fullName>23：屋外広告</fullName>
                </value>
                <value>
                    <fullName>24：交通広告</fullName>
                </value>
                <value>
                    <fullName>25：通りがかり</fullName>
                </value>
                <value>
                    <fullName>26：楽天ウエディング</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OtherDemand__c</fullName>
        <label>その他ご要望</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PreviewCount__c</fullName>
        <label>見学件数</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1：１件目</fullName>
                </value>
                <value>
                    <fullName>2：２件目</fullName>
                </value>
                <value>
                    <fullName>3：３件目</fullName>
                </value>
                <value>
                    <fullName>4：４件目</fullName>
                </value>
                <value>
                    <fullName>5：５件目</fullName>
                </value>
                <value>
                    <fullName>6：６件目以上</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sex__c</fullName>
        <label>性別</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>女性</fullName>
                </value>
                <value>
                    <fullName>男性</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tel__c</fullName>
        <label>電話番号</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>WeddingDate__c</fullName>
        <label>挙式予定日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>WeddingStyle__c</fullName>
        <label>希望挙式スタイル</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1：チャペル式</fullName>
                </value>
                <value>
                    <fullName>2：神殿式</fullName>
                </value>
                <value>
                    <fullName>3：人前式</fullName>
                </value>
                <value>
                    <fullName>4：外式</fullName>
                </value>
                <value>
                    <fullName>5：なし</fullName>
                </value>
                <value>
                    <fullName>6：その他</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>アンケート</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <label>アンケート名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>